Fix button on mobile

--- a/v3/src/js/views/components/ModulesSelect.scss
+++ b/v3/src/js/views/components/ModulesSelect.scss
@@ -10,6 +10,7 @@ $module-list-height: 13.5rem;
   composes: form-control from global;
   height: $input-height;
   text-align: left;
+  white-space: nowrap;
 
   // Remove bootstrap's box-shadow
   &:global(.form-control):focus {
